# RetailPulse-AI-Intelligence

./: .dockerignore  .gitattributes  .gitignore  01_data_loading_cleaning.ipynb  02_eda_analysis.ipynb  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dashboard.py
reports/: executive_summary.md
src/retailpulse/: __init__.py  analytics.py  config.py  data.py  ml.py  pdf_report.py  pipeline.py  reporting.py  visuals.py
submission/: DEMO_VIDEO_SCRIPT.md  FEEDBACK_REFLECTION_SCRIPT.md  REVIEWER_CHECKLIST.md  SUBMISSION_CHECKLIST.md  UPLOAD_AND_PUBLIC_LINK_INSTRUCTIONS.md
tests/: test_analytics.py  test_ml.py
video/: capture.mjs  package-lock.json  package.json
video/src/: root.tsx
video/src/videos/: DemoVideo.tsx  FeedbackVideo.tsx  shared.tsx
